Update .po files

--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-it-bootstrap-config-extension.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-it-bootstrap-config-extension.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-03 20:13+0000\n"
+"POT-Creation-Date: 2022-04-19 17:15+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -53,12 +53,14 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-it-bootstrap-config-extension.adoc:17
+#: upstream/_generated-config/latest/config/quarkus-it-bootstrap-config-extension.adoc:35
 #, no-wrap
 msgid "string"
 msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-it-bootstrap-config-extension.adoc:20
+#: upstream/_generated-config/latest/config/quarkus-it-bootstrap-config-extension.adoc:37
 #, no-wrap
 msgid "required icon:exclamation-circle[title=Configuration property is required]"
 msgstr ""
@@ -82,7 +84,19 @@ msgid "int"
 msgstr "int"
 
 #. type: Table
-#: upstream/_generated-config/latest/config/quarkus-it-bootstrap-config-extension.adoc:28
+#: upstream/_generated-config/latest/config/quarkus-it-bootstrap-config-extension.adoc:29
 #, no-wrap
 msgid "`2`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-it-bootstrap-config-extension.adoc:34
+#, no-wrap
+msgid ""
+"[[quarkus-it-bootstrap-config-extension_quarkus.dummy.map.-map]]`link:#quarkus-it-bootstrap-config-extension_quarkus.dummy.map.-map[quarkus.dummy.map.\"map\"]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"dummy value\n"
+"--"
 msgstr ""
