--- a/l10n/po/ja_JP/_guides/building-my-first-extension.adoc.po
+++ b/l10n/po/ja_JP/_guides/building-my-first-extension.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-02-04 01:50+0900\n"
+"POT-Creation-Date: 2022-04-19 17:17+0000\n"
 "PO-Revision-Date: 2022-04-13 15:50+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1719,7 +1719,7 @@ msgid ""
 "     -DprojectGroupId=org.acme \\\n"
 "     -DprojectArtifactId=greeting-app \\\n"
 "     -Dextensions=\"org.acme:greeting-extension:1.0.0-SNAPSHOT\" \\\n"
-"     -DnoExamples\n"
+"     -DnoCode\n"
 msgstr ""
 
 #. type: Plain text
