--- a/l10n/po/ja_JP/_guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-04-12 10:10+0000\n"
+"POT-Creation-Date: 2022-04-19 17:18+0000\n"
 "PO-Revision-Date: 2022-02-03 23:33+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
@@ -4675,16 +4675,195 @@ msgstr ""
 #. type: Title ==
 #: upstream/_guides/kafka.adoc:2404
 #, no-wrap
+msgid "Connecting to Managed Kafka clusters"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/kafka.adoc:2407
+msgid "This section explains how to connect to notorious Kafka Cloud Services."
+msgstr ""
+
+#. type: Title ===
+#: upstream/_guides/kafka.adoc:2408
+#, no-wrap
+msgid "Azure Event Hub"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/kafka.adoc:2411
+msgid "https://docs.microsoft.com/en-us/azure/event-hubs/event-hubs-for-kafka-ecosystem-overview[Azure Event Hub] provides an endpoint compatible with Apache Kafka."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/kafka.adoc:2415
+msgid "Azure Event Hubs for Kafka is not available in the _basic_ tier.  You need at least the _standard_ tier to use Kafka.  See https://azure.microsoft.com/en-us/pricing/details/event-hubs/[Azure Event Hubs Pricing] to see the other options."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/kafka.adoc:2417
+msgid "To connect to Azure Event Hub, using the Kafka protocol with TLS, you need the following configuration:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/kafka.adoc:2426
+#, no-wrap
+msgid ""
+"kafka.bootstrap.servers=my-event-hub.servicebus.windows.net:9093 # <1>\n"
+"kafka.security.protocol=SASL_SSL\n"
+"kafka.sasl.mechanism=PLAIN\n"
+"kafka.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required \\ # <2>\n"
+"    username=\"$ConnectionString\" \\ # <3>\n"
+"    password=\"<YOUR.EVENTHUBS.CONNECTION.STRING>\"; # <4>\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/kafka.adoc:2428
+msgid "The port is `9093`."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/kafka.adoc:2429
+msgid "You need to use the JAAS `PlainLoginModule`."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/kafka.adoc:2430
+msgid "The username is the `$ConnectionString` string."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/kafka.adoc:2431
+msgid "The Event Hub connection string given by Azure."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/kafka.adoc:2435
+msgid "Replace `<YOUR.EVENTHUBS.CONNECTION.STRING>` with the connection string for your Event Hubs namespace.  For instructions on getting the connection string, see https://docs.microsoft.com/en-us/azure/event-hubs/event-hubs-get-connection-string[Get an Event Hubs connection string].  The result would be something like:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/kafka.adoc:2441
+#, no-wrap
+msgid ""
+"kafka.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required \\\n"
+"    username=\"$ConnectionString\" \\\n"
+"    password=\"Endpoint=sb://my-event-hub.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=XXXXXXXXXXXXXXXX\";\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/kafka.adoc:2444
+msgid "This configuration can be global (as above), or set in the channel configuration:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/kafka.adoc:2453
+#, no-wrap
+msgid ""
+"mp.messaging.incoming.$channel.bootstrap.servers=my-event-hub.servicebus.windows.net:9093\n"
+"mp.messaging.incoming.$channel.security.protocol=SASL_SSL\n"
+"mp.messaging.incoming.$channel.sasl.mechanism=PLAIN\n"
+"mp.messaging.incoming.$channel.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required \\\n"
+"    username=\"$ConnectionString\" \\\n"
+"    password=\"Endpoint=sb://my-event-hub.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=...\";\n"
+msgstr ""
+
+#. type: Title ===
+#: upstream/_guides/kafka.adoc:2455
+#, no-wrap
+msgid "Red Hat OpenShift Streams for Apache Kafka"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/kafka.adoc:2460
+msgid "https://cloud.redhat.com/[Red Hat OpenShift Streams for Apache Kafka] provides managed Kafka brokers.  First, follow the instructions from https://access.redhat.com/documentation/en-us/red_hat_openshift_streams_for_apache_kafka/1/guide/88e1487a-2a14-4b35-85b9-a7a2d67a37f3[Getting started with the `rhoas` CLI for Red Hat OpenShift Streams for Apache Kafka] to create your Kafka broker instance.  Make sure you copied the client id and client secret associated with the _ServiceAccount_ you created."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/kafka.adoc:2462
+msgid "Then, you can configure the Quarkus application to connect to the broker as follows:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/kafka.adoc:2471
+#, no-wrap
+msgid ""
+"kafka.bootstrap.servers=<connection url> # <1>\n"
+"kafka.security.protocol=SASL_SSL\n"
+"kafka.sasl.mechanism=PLAIN\n"
+"kafka.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required \\\n"
+"  username=\"${KAFKA_USERNAME}\" \\ # <2>\n"
+"  password=\"${KAFKA_PASSWORD}\"; # <3>\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/kafka.adoc:2473
+msgid "The connection string, given on the admin console, such as `demo-c--bjsv-ldd-cvavkc-a.bf2.kafka.rhcloud.com:443`"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/kafka.adoc:2474
+msgid "The kafka username (the client id from the service account)"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/kafka.adoc:2475
+msgid "the kafka password (the client secret from the service account)"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/kafka.adoc:2477
+msgid "In general, these properties are prefixed using `%prod` to enable them only when running in production mode."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/kafka.adoc:2480
+msgid "As explained in https://access.redhat.com/documentation/en-us/red_hat_openshift_streams_for_apache_kafka/1/guide/88e1487a-2a14-4b35-85b9-a7a2d67a37f3[Getting started with the rhoas CLI for Red Hat OpenShift Streams for Apache Kafka], to use Red Hat OpenShift Streams for Apache Kafka, you must create the topic beforehand, create a _Service Account_, and provide permissions to read and write to your topic from that service account.  The authentication data (client id and secret) relates to the service account, which means you can implement fine-grain permissions and restrict access to the topic."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/kafka.adoc:2482
+msgid "When using Kubernetes, it is recommended to set the client id and secret in a Kubernetes secret:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/kafka.adoc:2492
+#, no-wrap
+msgid ""
+"apiVersion: v1\n"
+"kind: Secret\n"
+"metadata:\n"
+"  name: kafka-credentials\n"
+"stringData:\n"
+"  KAFKA_USERNAME: \"...\"\n"
+"  KAFKA_PASSWORD: \"...\"\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/kafka.adoc:2495
+#, fuzzy
+#| msgid "You can override the configuration by adding the following lines to the `application.properties`:"
+msgid "To allow your Quarkus application to use that secret, add the following line to the `application.properties` file:"
+msgstr "以下の行を `application.properties` に追加することで、設定を上書きすることができます。"
+
+#. type: delimited block -
+#: upstream/_guides/kafka.adoc:2499
+#, no-wrap
+msgid "%prod.quarkus.openshift.env.secrets=kafka-credentials\n"
+msgstr ""
+
+#. type: Title ==
+#: upstream/_guides/kafka.adoc:2501
+#, no-wrap
 msgid "Going further"
 msgstr "さらに詳しく"
 
 #. type: Plain text
-#: upstream/_guides/kafka.adoc:2408
+#: upstream/_guides/kafka.adoc:2505
 msgid "This guide has shown how you can interact with Kafka using Quarkus.  It utilizes SmallRye Reactive Messaging to build data streaming applications."
 msgstr "このガイドでは、Quarkus を使用して Kafka とやりとりする方法を示しました。SmallRye Reactive Messaging を利用して、データストリーミングアプリケーションを構築します。"
 
 #. type: Plain text
-#: upstream/_guides/kafka.adoc:2409
+#: upstream/_guides/kafka.adoc:2506
 msgid "If you want to go further, check the documentation of https://smallrye.io/smallrye-reactive-messaging[SmallRye Reactive Messaging], the implementation used in Quarkus."
 msgstr "詳細は、Quarkus で使用される実装 https://smallrye.io/smallrye-reactive-messaging[SmallRye Reactive Messaging] のドキュメントを確認してください。"
 
