--- a/l10n/po/ja_JP/_guides/security-jwt-build.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jwt-build.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-03-09 21:11+0000\n"
+"POT-Creation-Date: 2022-04-19 17:17+0000\n"
 "PO-Revision-Date: 2022-04-12 11:34+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -73,7 +73,7 @@ msgstr "pom.xml"
 msgid ""
 "<dependency>\n"
 "    <groupId>io.quarkus</groupId>\n"
-"    <artifactId></artifactId>\n"
+"    <artifactId>quarkus-smallrye-jwt-build</artifactId>\n"
 "</dependency>\n"
 msgstr ""
 
