--- a/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-03-09 21:11+0000\n"
+"POT-Creation-Date: 2022-04-19 17:18+0000\n"
 "PO-Revision-Date: 2021-04-30 16:54+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1280,13 +1280,13 @@ msgstr "相互のTLS"
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-client.adoc:641
 #, fuzzy
-msgid "Some OpenID Connect Providers may require that a client is authenticated as part of the `Mutual TLS` (`MTLS`) authentication process."
+msgid "Some OpenID Connect Providers may require that a client is authenticated as part of the `Mutual TLS` (`mTLS`) authentication process."
 msgstr "OpenID Connectプロバイダによっては、 `Mutual TLS` ( `MTLS`) 認証プロセスの一環として、クライアントの認証を要求する場合があります。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-client.adoc:643
 #, fuzzy
-msgid "`quarkus-oidc-client` can be configured as follows to support `MTLS`:"
+msgid "`quarkus-oidc-client` can be configured as follows to support `mTLS`:"
 msgstr "`quarkus-oidc-client` は、 `MTLS` をサポートするために以下のように構成することができます。"
 
 #. type: delimited block -
