--- a/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-04-12 10:10+0000\n"
+"POT-Creation-Date: 2022-04-19 17:17+0000\n"
 "PO-Revision-Date: 2022-02-03 10:24+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -2134,13 +2134,13 @@ msgstr "相互のTLS"
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:1040
 #, fuzzy
-msgid "Some OpenID Connect Providers may require that a client is authenticated as part of the `Mutual TLS` (`MTLS`) authentication process."
+msgid "Some OpenID Connect Providers may require that a client is authenticated as part of the `Mutual TLS` (`mTLS`) authentication process."
 msgstr "OpenID Connectプロバイダによっては、 `Mutual TLS` ( `MTLS`) 認証プロセスの一環として、クライアントの認証を要求する場合があります。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:1042
 #, fuzzy
-msgid "`quarkus-oidc` can be configured as follows to support `MTLS`:"
+msgid "`quarkus-oidc` can be configured as follows to support `mTLS`:"
 msgstr "`quarkus-oidc` は、 `MTLS` をサポートするために以下のように構成することができます。"
 
 #. type: delimited block -
