--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-quartz-quartz-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-quartz-quartz-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-30 15:09+0000\n"
+"POT-Creation-Date: 2022-04-19 17:15+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -129,7 +129,7 @@ msgid ""
 "[.description]\n"
 "--\n"
 "The name of the datasource to use. \n"
-" Optionally needed when using the `db` store type. If not specified, defaults to using the default datasource.\n"
+" Optionally needed when using the `jdbc-tx` or `jdbc-cmt` store types. If not specified, defaults to using the default datasource.\n"
 "--"
 msgstr ""
 
