--- a/l10n/po/ja_JP/_guides/building-native-image.adoc.po
+++ b/l10n/po/ja_JP/_guides/building-native-image.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-04-12 10:10+0000\n"
+"POT-Creation-Date: 2022-04-19 17:18+0000\n"
 "PO-Revision-Date: 2021-04-04 11:32+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
@@ -957,7 +957,7 @@ msgid ""
 "## Stage 1 : build with maven builder image with native capabilities\n"
 "FROM quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor} AS build\n"
 "COPY --chown=quarkus:quarkus gradlew /code/gradlew\n"
-"COPY --chown=quarkus:quarkus /code/gradle\n"
+"COPY --chown=quarkus:quarkus gradle /code/gradle\n"
 "COPY --chown=quarkus:quarkus build.gradle /code/\n"
 "COPY --chown=quarkus:quarkus settings.gradle /code/\n"
 "COPY --chown=quarkus:quarkus gradle.properties /code/\n"
