--- a/l10n/po/ja_JP/_guides/cdi-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/cdi-reference.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-04-12 10:10+0000\n"
+"POT-Creation-Date: 2022-04-19 17:17+0000\n"
 "PO-Revision-Date: 2021-03-12 12:41+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -2189,7 +2189,7 @@ msgstr "`NoopAsyncObserverExceptionHandler`"
 #, no-wrap
 msgid ""
 "@Singleton\n"
-"public class NoopAsyncObserverExceptionHandler {\n"
+"public class NoopAsyncObserverExceptionHandler implements AsyncObserverExceptionHandler {\n"
 msgstr ""
 
 #. type: delimited block -
