--- a/l10n/po/ja_JP/_guides/deploying-to-kubernetes.adoc.po
+++ b/l10n/po/ja_JP/_guides/deploying-to-kubernetes.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-04-12 10:10+0000\n"
+"POT-Creation-Date: 2022-04-19 17:17+0000\n"
 "PO-Revision-Date: 2022-04-12 14:49+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
@@ -264,7 +264,9 @@ msgstr "名前空間"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:181
-msgid "By default Quarkus omits the namespace in the generated manifests, rather than enforce the `default` namespace. That means that you can apply the manifest to your chosen namespace when using `kubctl`, which in the example below is `test`:"
+#, fuzzy
+#| msgid "By default Quarkus omits the namespace in the generated manifests, rather than enforce the `default` namespace. That means that you can apply the manifest to your chosen namespace when using `kubctl`, which in the example below is `test`:"
+msgid "By default Quarkus omits the namespace in the generated manifests, rather than enforce the `default` namespace. That means that you can apply the manifest to your chosen namespace when using `kubectl`, which in the example below is `test`:"
 msgstr "デフォルトでは、Quarkusは生成されたマニフェストの名前空間を省略し、 `default` 名前空間を強制しません。つまり、 `kubctl` (以下の例では `test` )を使用している場合は、選択したネームスペースにマニフェストを適用することができます。"
 
 #. type: delimited block -
