--- a/l10n/po/ja_JP/_guides/openapi-swaggerui.adoc.po
+++ b/l10n/po/ja_JP/_guides/openapi-swaggerui.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-04-12 10:10+0000\n"
+"POT-Creation-Date: 2022-04-19 17:18+0000\n"
 "PO-Revision-Date: 2022-04-11 15:55+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -87,7 +87,9 @@ msgstr "RESTリソースを公開する"
 
 #. type: Plain text
 #: upstream/_guides/openapi-swaggerui.adoc:43
-msgid "We will create a `Fruit` bean and a `FruitResouce` REST resource (feel free to take a look to the xref:rest-json.adoc[Writing JSON REST services guide] if your want more details on how to build a REST API with Quarkus)."
+#, fuzzy
+#| msgid "We will create a `Fruit` bean and a `FruitResouce` REST resource (feel free to take a look to the xref:rest-json.adoc[Writing JSON REST services guide] if your want more details on how to build a REST API with Quarkus)."
+msgid "We will create a `Fruit` bean and a `FruitResource` REST resource (feel free to take a look to the xref:rest-json.adoc[Writing JSON REST services guide] if your want more details on how to build a REST API with Quarkus)."
 msgstr "ここでは、 `Fruit` Beanと `FruitResouce` RESTリソースを作成します（QuarkusでREST APIを構築する方法について詳しく知りたい場合は、 link:rest-json.html[Writing JSON REST servicesガイド]を参照してください）。"
 
 #. type: delimited block -
