Add machine translation

--- a/l10n/po/ja_JP/_guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka.adoc.po
@@ -4674,35 +4674,39 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/kafka.adoc:2404
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Connecting to Managed Kafka clusters"
-msgstr ""
+msgstr "マネージドカフカクラスターへの接続"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:2407
+#, fuzzy
 msgid "This section explains how to connect to notorious Kafka Cloud Services."
-msgstr ""
+msgstr "悪名高いKafka Cloud Servicesへの接続方法について説明します。"
 
 #. type: Title ===
 #: upstream/_guides/kafka.adoc:2408
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Azure Event Hub"
-msgstr ""
+msgstr "Azureイベントハブ"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:2411
+#, fuzzy
 msgid "https://docs.microsoft.com/en-us/azure/event-hubs/event-hubs-for-kafka-ecosystem-overview[Azure Event Hub] provides an endpoint compatible with Apache Kafka."
-msgstr ""
+msgstr "link:https://docs.microsoft.com/en-us/azure/event-hubs/event-hubs-for-kafka-ecosystem-overview[Azure Event Hubは]、Apache Kafkaと互換性のあるエンドポイントを提供します。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:2415
+#, fuzzy
 msgid "Azure Event Hubs for Kafka is not available in the _basic_ tier.  You need at least the _standard_ tier to use Kafka.  See https://azure.microsoft.com/en-us/pricing/details/event-hubs/[Azure Event Hubs Pricing] to see the other options."
-msgstr ""
+msgstr "Azure Event Hubs for Kafkaは、 _Basic_Tierでは利用できません。Kafkaを使用するには、最低でも _標準_層が必要です。その他のオプションについては、 link:https://azure.microsoft.com/en-us/pricing/details/event-hubs/[Azure Event Hubs Pricingを]参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:2417
+#, fuzzy
 msgid "To connect to Azure Event Hub, using the Kafka protocol with TLS, you need the following configuration:"
-msgstr ""
+msgstr "Azure Event Hubに、KafkaプロトコルをTLSで接続するには、次の設定が必要です。"
 
 #. type: delimited block -
 #: upstream/_guides/kafka.adoc:2426
@@ -4718,28 +4722,33 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:2428
+#, fuzzy
 msgid "The port is `9093`."
-msgstr ""
+msgstr "ポートは、 `9093` 。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:2429
+#, fuzzy
 msgid "You need to use the JAAS `PlainLoginModule`."
-msgstr ""
+msgstr "JAAS `PlainLoginModule` を使用する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:2430
+#, fuzzy
 msgid "The username is the `$ConnectionString` string."
-msgstr ""
+msgstr "ユーザー名は、 `$ConnectionString` の文字列です。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:2431
+#, fuzzy
 msgid "The Event Hub connection string given by Azure."
-msgstr ""
+msgstr "Azure が提供する Event Hub 接続文字列。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:2435
+#, fuzzy
 msgid "Replace `<YOUR.EVENTHUBS.CONNECTION.STRING>` with the connection string for your Event Hubs namespace.  For instructions on getting the connection string, see https://docs.microsoft.com/en-us/azure/event-hubs/event-hubs-get-connection-string[Get an Event Hubs connection string].  The result would be something like:"
-msgstr ""
+msgstr "`&amp;lt;YOUR.EVENTHUBS.CONNECTION.STRING&amp;gt;` を、お使いの Event Hubs ネームスペースの接続文字列に置き換えます。接続文字列の取得方法については、「 link:https://docs.microsoft.com/en-us/azure/event-hubs/event-hubs-get-connection-string[Event Hubs の接続文字列を取得]する」を参照してください。結果は、以下のようになります。"
 
 #. type: delimited block -
 #: upstream/_guides/kafka.adoc:2441
@@ -4752,8 +4761,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:2444
+#, fuzzy
 msgid "This configuration can be global (as above), or set in the channel configuration:"
-msgstr ""
+msgstr "このコンフィギュレーションは、グローバル（上記の通り）、またはチャンネルコンフィギュレーションで設定することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/kafka.adoc:2453
@@ -4769,19 +4779,21 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/kafka.adoc:2455
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Red Hat OpenShift Streams for Apache Kafka"
-msgstr ""
+msgstr "Red Hat OpenShift Streams for Apache Kafka（レッドハット オープンシフト ストリームズ フォー アパッチ カフカ"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:2460
+#, fuzzy
 msgid "https://cloud.redhat.com/[Red Hat OpenShift Streams for Apache Kafka] provides managed Kafka brokers.  First, follow the instructions from https://access.redhat.com/documentation/en-us/red_hat_openshift_streams_for_apache_kafka/1/guide/88e1487a-2a14-4b35-85b9-a7a2d67a37f3[Getting started with the `rhoas` CLI for Red Hat OpenShift Streams for Apache Kafka] to create your Kafka broker instance.  Make sure you copied the client id and client secret associated with the _ServiceAccount_ you created."
-msgstr ""
+msgstr "link:https://cloud.redhat.com/[Red Hat OpenShift Streams for Apache Kafka]は、管理された Kafka ブローカーを提供します。まず、 link:https://access.redhat.com/documentation/en-us/red_hat_openshift_streams_for_apache_kafka/1/guide/88e1487a-2a14-4b35-85b9-a7a2d67a37f3[Getting started with the `rhoas` CLI for Red Hat OpenShift Streams for Apache Kafka]の説明に従って、Kafka ブローカーのインスタンスを作成します。作成した _ServiceAccount_に関連するクライアント ID とクライアントシークレットをコピーしたことを確認します。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:2462
+#, fuzzy
 msgid "Then, you can configure the Quarkus application to connect to the broker as follows:"
-msgstr ""
+msgstr "次に、Quarkusアプリケーションがブローカーに接続するように、以下のように設定します。"
 
 #. type: delimited block -
 #: upstream/_guides/kafka.adoc:2471
@@ -4797,33 +4809,39 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:2473
+#, fuzzy
 msgid "The connection string, given on the admin console, such as `demo-c--bjsv-ldd-cvavkc-a.bf2.kafka.rhcloud.com:443`"
-msgstr ""
+msgstr "管理コンソールで指定された、次のような接続文字列。 `demo-c—​bjsv-ldd-cvavkc-a.bf2.kafka.rhcloud.com:443`"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:2474
+#, fuzzy
 msgid "The kafka username (the client id from the service account)"
-msgstr ""
+msgstr "カフカのユーザー名（サービスアカウントのクライアントID）。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:2475
+#, fuzzy
 msgid "the kafka password (the client secret from the service account)"
-msgstr ""
+msgstr "kafka のパスワード (サービスアカウントのクライアントシークレット)"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:2477
+#, fuzzy
 msgid "In general, these properties are prefixed using `%prod` to enable them only when running in production mode."
-msgstr ""
+msgstr "一般に、これらのプロパティには `%prod` というプレフィックスが付き、プロダクションモードで動作しているときのみ有効になるようになっています。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:2480
+#, fuzzy
 msgid "As explained in https://access.redhat.com/documentation/en-us/red_hat_openshift_streams_for_apache_kafka/1/guide/88e1487a-2a14-4b35-85b9-a7a2d67a37f3[Getting started with the rhoas CLI for Red Hat OpenShift Streams for Apache Kafka], to use Red Hat OpenShift Streams for Apache Kafka, you must create the topic beforehand, create a _Service Account_, and provide permissions to read and write to your topic from that service account.  The authentication data (client id and secret) relates to the service account, which means you can implement fine-grain permissions and restrict access to the topic."
-msgstr ""
+msgstr "link:https://access.redhat.com/documentation/en-us/red_hat_openshift_streams_for_apache_kafka/1/guide/88e1487a-2a14-4b35-85b9-a7a2d67a37f3[Getting started with rhoas CLI for Red Hat OpenShift Streams for Apache Kafka] で説明したように、Red Hat OpenShift Streams for Apache Kafka を使用するには、事前にトピックを作成し、 _サービスアカウントを_作成し、そのサービスアカウントからトピックへの読み書きの権限を付与する必要があります。認証データ（クライアントID、シークレット）はサービスアカウントに関連するため、きめ細かいパーミッションを実装し、トピックへのアクセスを制限することが可能です。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:2482
+#, fuzzy
 msgid "When using Kubernetes, it is recommended to set the client id and secret in a Kubernetes secret:"
-msgstr ""
+msgstr "Kubernetesを利用する場合は、KubernetesのsecretにクライアントIDとsecretを設定することが推奨されます。"
 
 #. type: delimited block -
 #: upstream/_guides/kafka.adoc:2492
@@ -4841,7 +4859,6 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:2495
 #, fuzzy
-#| msgid "You can override the configuration by adding the following lines to the `application.properties`:"
 msgid "To allow your Quarkus application to use that secret, add the following line to the `application.properties` file:"
 msgstr "以下の行を `application.properties` に追加することで、設定を上書きすることができます。"
 
