Update translation stats

--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -244,6 +244,7 @@ l10n/po/ja_JP/_guides/resteasy-reactive-migration.adoc.po, 66, 69, 579, 583 ,1%
 l10n/po/ja_JP/_guides/smallrye-kafka-outgoing.adoc.po, 85, 85, 954, 954 ,0%
 l10n/po/ja_JP/_guides/smallrye-kafka-incoming.adoc.po, 101, 101, 1205, 1205 ,0%
 l10n/po/ja_JP/_guides/kogito-dev-services-build-time-config.adoc.po, 16, 16, 327, 327 ,0%
+l10n/po/ja_JP/_posts/2022-04-27-monitoring-quarkus-jvm-mode-with-cryostat.adoc.po, 0, 52, 0, 1216 ,100%
 l10n/po/ja_JP/_posts/2022-04-04-vscode-quarkus-1.10.0-qute.adoc.po, 1, 104, 0, 1357 ,100%
 l10n/po/ja_JP/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc.po, 0, 55, 0, 971 ,100%
 l10n/po/ja_JP/_posts/2022-03-17-quarkus-newsletter-18.adoc.po, 0, 6, 0, 194 ,100%
