Add machine translation

--- a/l10n/po/ja_JP/_guides/security-keycloak-authorization.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-keycloak-authorization.adoc.po
@@ -737,8 +737,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:372
+#, fuzzy
 msgid "Note: If you want to use the `AuthzClient` directly make sure to to set `quarkus.keycloak.policy-enforcer.enable=true` otherwise there is no Bean available for injection."
-msgstr ""
+msgstr "注： `AuthzClient` を直接使用する場合は、必ず `quarkus.keycloak.policy-enforcer.enable=true` を設定してください。そうしないと、インジェクションに使用できる Bean がありません。"
 
 #. type: Title ==
 #: upstream/_guides/security-keycloak-authorization.adoc:373
