--- a/l10n/po/ja_JP/_posts/2022-04-26-quarkus-2-8-2-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-04-26-quarkus-2-8-2-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-04-26-quarkus-2-8-2-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-26-quarkus-2-8-2-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.8.2.Final released - Maintenance release'\n"
@@ -34,21 +34,31 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 2.8.2.Final リリース - メンテナンスリリース'\n"
+"date: 2022-04-26\n"
+"tags: release\n"
+"synopsis: 2.8.2.Final は、2.8 リリーストレインの 2 回目のメンテナンスリリースです。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-26-quarkus-2-8-2-final-released.adoc:11
+#, fuzzy
 msgid "Today, we released 2.8.2.Final which, as usual, only contains bugfixes and documentation improvements."
-msgstr ""
+msgstr "本日、2.8.2.Finalをリリースしましたが、例によってバグフィックスとドキュメントの改善のみが含まれています。"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-26-quarkus-2-8-2-final-released.adoc:13
+#, fuzzy
 msgid "It is a safe upgrade for anyone already using 2.8."
-msgstr ""
+msgstr "すでに2.8をお使いの方も安心してアップグレードしていただけます。"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-26-quarkus-2-8-2-final-released.adoc:15
+#, fuzzy
 msgid "If you are not using 2.8 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.8[2.8 migration guide]."
-msgstr ""
+msgstr "まだ2.8をお使いでない方は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.8[2.8移行ガイドを]ご参照ください。"
 
 #. type: Title ==
 #: upstream/_posts/2022-04-26-quarkus-2-8-2-final-released.adoc:16
@@ -58,8 +68,9 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-26-quarkus-2-8-2-final-released.adoc:19
+#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.8.2.Final[the full changelog of 2.8.2.Final on GitHub]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.8.2.Final[2.8.2.Finalの全変更履歴は、GitHubで]ご覧いただけます。"
 
 #. type: Title ==
 #: upstream/_posts/2022-04-26-quarkus-2-8-2-final-released.adoc:20
