Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-config-group-logging-file-config-rotation-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-config-group-logging-file-config-rotation-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-14 02:14+0000\n"
+"POT-Creation-Date: 2022-04-27 02:52+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -62,7 +62,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-config-group-logging-file-config-rotation-config.adoc:20
 #: upstream/_generated-config/main/config/quarkus-config-group-logging-file-config-rotation-config.adoc:57
 #, no-wrap
-msgid "`10`"
+msgid "`10M`"
 msgstr ""
 
 #. type: Table
@@ -88,7 +88,7 @@ msgstr "int"
 #: upstream/_generated-config/main/config/quarkus-config-group-logging-file-config-rotation-config.adoc:29
 #: upstream/_generated-config/main/config/quarkus-config-group-logging-file-config-rotation-config.adoc:66
 #, no-wrap
-msgid "`1`"
+msgid "`5`"
 msgstr ""
 
 #. type: Table
