--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-config-group-logging-file-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-config-group-logging-file-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-14 02:13+0000\n"
+"POT-Creation-Date: 2022-04-27 02:52+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -242,7 +242,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-config-group-logging-file-config.adoc:85
 #: upstream/_generated-config/main/config/quarkus-config-group-logging-file-config.adoc:192
 #, no-wrap
-msgid "`10`"
+msgid "`10M`"
 msgstr ""
 
 #. type: Table
@@ -261,7 +261,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-config-group-logging-file-config.adoc:94
 #: upstream/_generated-config/main/config/quarkus-config-group-logging-file-config.adoc:201
 #, no-wrap
-msgid "`1`"
+msgid "`5`"
 msgstr ""
 
 #. type: Table
