--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-log-logging-log-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-log-logging-log-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-14 02:14+0000\n"
+"POT-Creation-Date: 2022-04-27 02:53+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -486,7 +486,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-log-logging-log-config.adoc:189
 #: upstream/_generated-config/main/config/quarkus-log-logging-log-config.adoc:548
 #, no-wrap
-msgid "`10`"
+msgid "`10M`"
 msgstr ""
 
 #. type: Table
@@ -505,7 +505,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-log-logging-log-config.adoc:198
 #: upstream/_generated-config/main/config/quarkus-log-logging-log-config.adoc:557
 #, no-wrap
-msgid "`1`"
+msgid "`5`"
 msgstr ""
 
 #. type: Table
