Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-vertx-http.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-vertx-http.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-04-19 02:45+0000\n"
+"POT-Creation-Date: 2022-04-28 03:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -62,6 +62,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:570
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:588
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:712
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1046
 #, no-wrap
 msgid "int"
 msgstr "int"
@@ -121,6 +122,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:938
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:992
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1001
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1019
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -597,6 +599,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:929
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:947
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1010
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1037
 #, no-wrap
 msgid "list of string"
 msgstr ""
@@ -685,6 +688,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:950
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:968
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1004
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1022
 #, no-wrap
 msgid "required icon:exclamation-circle[title=Configuration property is required]"
 msgstr ""
@@ -1825,29 +1829,83 @@ msgid ""
 "--"
 msgstr ""
 
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1018
+#, no-wrap
+msgid ""
+"[[quarkus-vertx-http_quarkus.http.filter.-filter-.matches]]`link:#quarkus-vertx-http_quarkus.http.filter.-filter-.matches[quarkus.http.filter.\"filter\".matches]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"A regular expression for the paths matching this configuration\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1027
+#, no-wrap
+msgid ""
+"[[quarkus-vertx-http_quarkus.http.filter.-filter-.header-header]]`link:#quarkus-vertx-http_quarkus.http.filter.-filter-.header-header[quarkus.http.filter.\"filter\".header]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Additional HTTP Headers always sent in the response\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1028
+#, no-wrap
+msgid "`Map<String,String>`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1036
+#, no-wrap
+msgid ""
+"[[quarkus-vertx-http_quarkus.http.filter.-filter-.methods]]`link:#quarkus-vertx-http_quarkus.http.filter.-filter-.methods[quarkus.http.filter.\"filter\".methods]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The HTTP methods for this path configuration\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1045
+#, no-wrap
+msgid ""
+"[[quarkus-vertx-http_quarkus.http.filter.-filter-.order]]`link:#quarkus-vertx-http_quarkus.http.filter.-filter-.order[quarkus.http.filter.\"filter\".order]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"\n"
+"--"
+msgstr ""
+
 #. type: Block title
-#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1016
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1052
 #, no-wrap
 msgid "About the Duration format"
 msgstr "期間フォーマットについて"
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1020
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1056
 msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
 msgstr "期間のフォーマットは標準の `java.time.Duration` フォーマットを使用します。詳細は link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc] を参照してください。"
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1024
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1060
 msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
 msgstr "数値で始まる期間の値を指定することもできます。この場合、値が数値のみで構成されている場合、コンバーターは値を秒として扱います。そうでない場合は、 `PT` が暗黙的に値の前に付加され、標準の `java.time.Duration` 形式が得られます。"
 
 #. type: Block title
-#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1029
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1065
 #, no-wrap
 msgid "About the MemorySize format"
 msgstr ""
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1033
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1069
 msgid "A size configuration option recognises string in this format (shown as a regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.  If no suffix is given, assume bytes."
 msgstr ""
