--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-http-http-configuration.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-http-http-configuration.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-04-19 02:45+0000\n"
+"POT-Creation-Date: 2022-04-28 03:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -123,6 +123,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:333
 #: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:351
 #: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:475
+#: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:755
 #, no-wrap
 msgid "int"
 msgstr "int"
@@ -187,6 +188,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:656
 #: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:701
 #: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:710
+#: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:728
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -195,6 +197,7 @@ msgstr "string"
 #: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:47
 #: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:677
 #: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:713
+#: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:731
 #, no-wrap
 msgid "required icon:exclamation-circle[title=Configuration property is required]"
 msgstr ""
@@ -316,6 +319,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:270
 #: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:279
 #: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:719
+#: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:746
 #, no-wrap
 msgid "list of string"
 msgstr ""
@@ -1298,29 +1302,83 @@ msgid ""
 "--"
 msgstr ""
 
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:727
+#, no-wrap
+msgid ""
+"[[quarkus-http-http-configuration_quarkus.http.filter.-filter-.matches]]`link:#quarkus-http-http-configuration_quarkus.http.filter.-filter-.matches[quarkus.http.filter.\"filter\".matches]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"A regular expression for the paths matching this configuration\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:736
+#, no-wrap
+msgid ""
+"[[quarkus-http-http-configuration_quarkus.http.filter.-filter-.header-header]]`link:#quarkus-http-http-configuration_quarkus.http.filter.-filter-.header-header[quarkus.http.filter.\"filter\".header]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Additional HTTP Headers always sent in the response\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:737
+#, no-wrap
+msgid "`Map<String,String>`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:745
+#, no-wrap
+msgid ""
+"[[quarkus-http-http-configuration_quarkus.http.filter.-filter-.methods]]`link:#quarkus-http-http-configuration_quarkus.http.filter.-filter-.methods[quarkus.http.filter.\"filter\".methods]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The HTTP methods for this path configuration\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:754
+#, no-wrap
+msgid ""
+"[[quarkus-http-http-configuration_quarkus.http.filter.-filter-.order]]`link:#quarkus-http-http-configuration_quarkus.http.filter.-filter-.order[quarkus.http.filter.\"filter\".order]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"\n"
+"--"
+msgstr ""
+
 #. type: Block title
-#: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:725
+#: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:761
 #, no-wrap
 msgid "About the Duration format"
 msgstr "期間フォーマットについて"
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:729
+#: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:765
 msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
 msgstr "期間のフォーマットは標準の `java.time.Duration` フォーマットを使用します。詳細は link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc] を参照してください。"
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:733
+#: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:769
 msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
 msgstr "数値で始まる期間の値を指定することもできます。この場合、値が数値のみで構成されている場合、コンバーターは値を秒として扱います。そうでない場合は、 `PT` が暗黙的に値の前に付加され、標準の `java.time.Duration` 形式が得られます。"
 
 #. type: Block title
-#: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:738
+#: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:774
 #, no-wrap
 msgid "About the MemorySize format"
 msgstr ""
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:742
+#: upstream/_generated-config/main/config/quarkus-http-http-configuration.adoc:778
 msgid "A size configuration option recognises string in this format (shown as a regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.  If no suffix is given, assume bytes."
 msgstr ""
