--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc.po
@@ -508,7 +508,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:292
 #, no-wrap
 msgid "About the Duration format"
-msgstr ""
+msgstr "期間フォーマットについて"
 
 #. type: delimited block =
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:296
