--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc.po
@@ -486,7 +486,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:278
 #, no-wrap
 msgid "About the Duration format"
-msgstr ""
+msgstr "期間フォーマットについて"
 
 #. type: delimited block =
 #: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:282
