Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-build-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-build-items.adoc.po
@@ -3079,7 +3079,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-build-items.adoc:934
 #, no-wrap
 msgid "Hibernate Reactive with Panache"
-msgstr ""
+msgstr "Hibernate Reactive with Panache"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-build-items.adoc:939
