--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-all-build-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-all-build-items.adoc.po
@@ -3116,7 +3116,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-all-build-items.adoc:945
 #, no-wrap
 msgid "Hibernate Reactive with Panache"
-msgstr ""
+msgstr "Hibernate Reactive with Panache"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-all-build-items.adoc:950
