--- a/l10n/po/ja_JP/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc.po
@@ -32,7 +32,7 @@ msgstr "2022-02-23"
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:1
 #, no-wrap
 msgid "post"
-msgstr ""
+msgstr "post"
 
 #. type: YAML Front Matter: synopsis
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:1
