--- a/l10n/po/ja_JP/_posts/2022-02-23-quarkus-newsletter-17.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-02-23-quarkus-newsletter-17.adoc.po
@@ -38,7 +38,7 @@ msgstr "2022-02-23"
 #: upstream/_posts/2022-02-23-quarkus-newsletter-17.adoc:1
 #, no-wrap
 msgid "post"
-msgstr ""
+msgstr "post"
 
 #. type: YAML Front Matter: synopsis
 #: upstream/_posts/2022-02-23-quarkus-newsletter-17.adoc:1
