--- a/l10n/po/ja_JP/_posts/2022-03-09-quarkus-2-7-4-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-03-09-quarkus-2-7-4-final-released.adoc.po
@@ -32,7 +32,7 @@ msgstr "2022-03-09"
 #: upstream/_posts/2022-03-09-quarkus-2-7-4-final-released.adoc:1
 #, no-wrap
 msgid "post"
-msgstr ""
+msgstr "post"
 
 #. type: YAML Front Matter: synopsis
 #: upstream/_posts/2022-03-09-quarkus-2-7-4-final-released.adoc:1
