--- a/l10n/po/ja_JP/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc.po
@@ -32,7 +32,7 @@ msgstr "2022-03-28"
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:1
 #, no-wrap
 msgid "post"
-msgstr ""
+msgstr "post"
 
 #. type: YAML Front Matter: synopsis
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:1
