--- a/l10n/po/ja_JP/_posts/2022-02-22-quarkus-superheroes-to-the-rescue.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-02-22-quarkus-superheroes-to-the-rescue.adoc.po
@@ -5,12 +5,12 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2022-04-29 21:23+0900\n"
-"PO-Revision-Date: 2022-04-29 23:18+0900\n"
-"Last-Translator: \n"
-"Language-Team: \n"
-"Language: ja\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -18,33 +18,40 @@ msgstr ""
 
 #. type: YAML Front Matter: author
 #: upstream/_posts/2022-02-22-quarkus-superheroes-to-the-rescue.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "edeandrea"
-msgstr "edeandrea"
+msgstr "こくど"
 
 #. type: YAML Front Matter: date
 #: upstream/_posts/2022-02-22-quarkus-superheroes-to-the-rescue.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "2022-02-22"
 msgstr "2022-02-22"
 
 #. type: YAML Front Matter: layout
 #: upstream/_posts/2022-02-22-quarkus-superheroes-to-the-rescue.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "post"
-msgstr ""
+msgstr "ポスト"
 
 #. type: YAML Front Matter: synopsis
 #: upstream/_posts/2022-02-22-quarkus-superheroes-to-the-rescue.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Introduction to the Quarkus Superheroes sample application, discusses some of the requirements for building it, and illustrates how to run it locally or deploy it to Kubernetes."
-msgstr "Quarkus Superheroesのサンプルアプリケーションを紹介し、構築に必要ないくつかの要件を説明し、ローカルで実行する方法やKubernetesにデプロイする方法を説明します。"
+msgstr ""
+"layout: post\n"
+"title: 'Quarkus Superheroesによる救助!'\n"
+"date: 2022-02-22\n"
+"tags: apicurio avro fault-tolerance kafka messaging metrics openapi reactive resteasy testing web\n"
+"synopsis: Quarkus Superheroesのサンプルアプリケーションを紹介し、構築に必要ないくつかの要件を説明し、ローカルで実行する方法やKubernetesにデプロイする方法を説明します。\n"
+"author: edeandrea\n"
+"---\n"
 
 #. type: YAML Front Matter: tags
 #: upstream/_posts/2022-02-22-quarkus-superheroes-to-the-rescue.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "apicurio avro fault-tolerance kafka messaging metrics openapi reactive resteasy testing web"
-msgstr ""
+msgstr "apicurio avro fault-tolerance kafka messaging metrics openapi reactive resteasy testing web"
 
 #. type: Title =
 #: upstream/_posts/2022-02-22-quarkus-superheroes-to-the-rescue.adoc:1
