Apply translation memory

--- a/l10n/po/ja_JP/newsletter.md.po
+++ b/l10n/po/ja_JP/newsletter.md.po
@@ -20,7 +20,7 @@ msgstr ""
 #: upstream/newsletter.md:1
 #, no-wrap
 msgid "newsletter"
-msgstr ""
+msgstr "newsletter"
 
 #. type: YAML Front Matter: permalink
 #: upstream/newsletter.md:1
