Translate blog posts front matters(cont.)

--- a/l10n/po/ja_JP/_posts/2021-08-23-resteasy-reactive-smart-dispatch.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-08-23-resteasy-reactive-smart-dispatch.adoc.po
@@ -7,48 +7,50 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-04-29 21:23+0900\n"
-"PO-Revision-Date: 2021-10-02 00:03+0900\n"
+"PO-Revision-Date: 2022-04-30 16:32+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: YAML Front Matter: author
 #: upstream/_posts/2021-08-23-resteasy-reactive-smart-dispatch.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "cescoffier"
-msgstr "クスコフィエ"
+msgstr "cescoffier"
 
 #. type: YAML Front Matter: date
 #: upstream/_posts/2021-08-23-resteasy-reactive-smart-dispatch.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2021-08-25"
 msgstr "2021-08-25"
 
 #. type: YAML Front Matter: layout
 #: upstream/_posts/2021-08-23-resteasy-reactive-smart-dispatch.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "post"
-msgstr "ポスト"
+msgstr "post"
 
 #. type: YAML Front Matter: synopsis
 #: upstream/_posts/2021-08-23-resteasy-reactive-smart-dispatch.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus 2.2 includes a new dispatching strategy to make RESTEasy Reactive even better."
-msgstr "Quarkus 2.2では、RESTEasy _reactive_ のディスパッチ戦略がよりスマートになり、開発者のエクスペリエンスが向上しました。"
+msgstr "Quarkus 2.2では、RESTEasy Reactive のディスパッチ戦略がよりスマートになり、開発者のエクスペリエンスが向上しました。"
 
 #. type: YAML Front Matter: tags
 #: upstream/_posts/2021-08-23-resteasy-reactive-smart-dispatch.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "reactive rest"
-msgstr "反応性休息"
+msgstr "reactive rest"
 
 #. type: YAML Front Matter: title
 #: upstream/_posts/2021-08-23-resteasy-reactive-smart-dispatch.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "RESTEasy Reactive - To block or not to block"
-msgstr "RESTEasy Reactive - ブロックするかしないか"
+msgstr "RESTEasy Reactive - ブロックするか、しないべきか、それが問題だ"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-23-resteasy-reactive-smart-dispatch.adoc:14
