Apply translation memory

--- a/l10n/po/ja_JP/.github/ISSUE_TEMPLATE/insights.md.po
+++ b/l10n/po/ja_JP/.github/ISSUE_TEMPLATE/insights.md.po
@@ -26,7 +26,7 @@ msgstr ""
 #: upstream/.github/ISSUE_TEMPLATE/insights.md:1
 #, no-wrap
 msgid "insights"
-msgstr ""
+msgstr "insights"
 
 #. type: YAML Front Matter: name
 #: upstream/.github/ISSUE_TEMPLATE/insights.md:1
