--- a/l10n/po/ja_JP/insights.md.po
+++ b/l10n/po/ja_JP/insights.md.po
@@ -20,7 +20,7 @@ msgstr ""
 #: upstream/insights.md:1
 #, no-wrap
 msgid "insights"
-msgstr ""
+msgstr "insights"
 
 #. type: YAML Front Matter: permalink
 #: upstream/insights.md:1
