Translate blog posts front matters(cont.)

--- a/l10n/po/ja_JP/_posts/2020-10-28-quarkus-1-9-1-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-10-28-quarkus-1-9-1-final-released.adoc.po
@@ -3,58 +3,57 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-04-29 21:23+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-04-30 17:24+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: YAML Front Matter: author
 #: upstream/_posts/2020-10-28-quarkus-1-9-1-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "gsmet"
 msgstr "gsmet"
 
 #. type: YAML Front Matter: date
 #: upstream/_posts/2020-10-28-quarkus-1-9-1-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2020-10-28"
 msgstr "2020-10-28"
 
 #. type: YAML Front Matter: layout
 #: upstream/_posts/2020-10-28-quarkus-1-9-1-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "post"
-msgstr "ポスト"
+msgstr "post"
 
 #. type: YAML Front Matter: synopsis
 #: upstream/_posts/2020-10-28-quarkus-1-9-1-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "1.9.1.Final fixes issues and comes with documentation improvements."
 msgstr "1.9.1.Final では、問題が修正され、ドキュメントが改善されています。"
 
 #. type: YAML Front Matter: tags
 #: upstream/_posts/2020-10-28-quarkus-1-9-1-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "release"
-msgstr "リリース"
+msgstr "release"
 
 #. type: YAML Front Matter: title
 #: upstream/_posts/2020-10-28-quarkus-1-9-1-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus 1.9.1.Final released - Bugfixes"
 msgstr "Quarkus 1.9.1.Final リリース - バグフィックス"
 
 #. type: Plain text
 #: upstream/_posts/2020-10-28-quarkus-1-9-1-final-released.adoc:11
-#, fuzzy
 msgid "Thanks to all your feedback, here comes 1.9.1.Final with bugfixes and documentation improvements."
 msgstr "皆様のご意見に感謝し、バグフィックスとドキュメントの改善を行った1.9.1.Finalをお届けします。"
 
@@ -76,15 +75,13 @@ msgstr "変更点"
 
 #. type: Plain text
 #: upstream/_posts/2020-10-28-quarkus-1-9-1-final-released.adoc:19
-#, fuzzy
 msgid "This release is a maintenance release that fixes various bugs found in 1.9.0.Final and provides some documentation updates."
 msgstr "このリリースは、1.9.0.Finalで見つかったさまざまなバグを修正し、いくつかのドキュメントを更新したメンテナンスリリースです。"
 
 #. type: Plain text
 #: upstream/_posts/2020-10-28-quarkus-1-9-1-final-released.adoc:21
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/1.9.1.Final[the full changelog of 1.9.1.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.9.1.Final[1.9.1.Finalの完全な変更履歴は、GitHubに]掲載されています。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.9.1.Final[1.9.1.Finalの完全な変更履歴は、GitHub]に掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2020-10-28-quarkus-1-9-1-final-released.adoc:22
