--- a/l10n/po/ja_JP/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc.po
@@ -3,52 +3,52 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-04-29 21:23+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-04-30 17:23+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: YAML Front Matter: author
 #: upstream/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "gsmet"
 msgstr "gsmet"
 
 #. type: YAML Front Matter: date
 #: upstream/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2020-11-05"
 msgstr "2020-11-05"
 
 #. type: YAML Front Matter: layout
 #: upstream/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "post"
-msgstr "ポスト"
+msgstr "post"
 
 #. type: YAML Front Matter: synopsis
 #: upstream/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "1.9.2.Final fixes issues and comes with documentation improvements."
 msgstr "1.9.2.Final では、問題が修正され、ドキュメントが改善されています。"
 
 #. type: YAML Front Matter: tags
 #: upstream/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "release"
-msgstr "リリース"
+msgstr "release"
 
 #. type: YAML Front Matter: title
 #: upstream/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus 1.9.2.Final released - Bugfixes"
 msgstr "Quarkus 1.9.2.Final リリース - バグフィックス"
 
