--- a/l10n/po/ja_JP/_posts/2020-11-25-stylish-api.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-11-25-stylish-api.adoc.po
@@ -3,48 +3,48 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-04-29 21:23+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-04-30 17:21+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: YAML Front Matter: author
 #: upstream/_posts/2020-11-25-stylish-api.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "phillipkruger"
-msgstr "フィリップクルー"
+msgstr "phillipkruger"
 
 #. type: YAML Front Matter: date
 #: upstream/_posts/2020-11-25-stylish-api.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2020-11-25"
 msgstr "2020-11-25"
 
 #. type: YAML Front Matter: layout
 #: upstream/_posts/2020-11-25-stylish-api.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "post"
-msgstr "ポスト"
+msgstr "post"
 
 #. type: YAML Front Matter: synopsis
 #: upstream/_posts/2020-11-25-stylish-api.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Swagger UI configuration and custom styling"
 msgstr "Swagger UIの設定とカスタムスタイリング"
 
 #. type: YAML Front Matter: tags
 #: upstream/_posts/2020-11-25-stylish-api.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "extension openapi swagger-ui"
-msgstr "エクステンション openapi swagger-ui"
+msgstr "extension openapi swagger-ui"
 
 #. type: Title =
 #: upstream/_posts/2020-11-25-stylish-api.adoc:1
@@ -82,7 +82,7 @@ msgstr "Swagger UIのデフォルトスタイルがバニラのSwagger UIからQ
 
 #. type: Positional ($1) AttributeList argument for macro 'image'
 #: upstream/_posts/2020-11-25-stylish-api.adoc:23
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "quarkus_brand"
 msgstr "quarkus_brand"
 
@@ -123,7 +123,7 @@ msgstr ""
 #: upstream/_posts/2020-11-25-stylish-api.adoc:38
 #, fuzzy, no-wrap
 msgid "themed"
-msgstr "テーマ"
+msgstr "themed"
 
 #. type: Target for macro image
 #: upstream/_posts/2020-11-25-stylish-api.adoc:38
@@ -145,7 +145,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2020-11-25-stylish-api.adoc:47
 #: upstream/_posts/2020-11-25-stylish-api.adoc:53
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "original"
 msgstr "オリジナル"
 
