--- a/l10n/po/ja_JP/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc.po
@@ -3,59 +3,52 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-04-29 21:23+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-04-30 17:17+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: to\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: YAML Front Matter: author
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "adamevin"
-msgstr "アダマビン"
+msgstr "adamevin"
 
 #. type: YAML Front Matter: date
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2020-12-07"
 msgstr "2020-12-07"
 
 #. type: YAML Front Matter: layout
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "post"
-msgstr "ポスト"
+msgstr "post"
 
 #. type: YAML Front Matter: synopsis
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "All our tooling has been updated and can now generate Quarkus application with example code (Extension Codestarts) showing the true power of the selected extensions..."
-msgstr ""
-"layout: post\n"
-"title: 拡張機能codestarts - Quarkusを学ぶ、発見するための新しい方法\n"
-"date: 2020-12-07\n"
-"tags: extensions codestarts quickstart\n"
-"synopsis: すべてのツールが更新され、選択した拡張機能の真の力を示すサンプルコード（Extension Codestarts）とともにQuarkusアプリケーションを生成できるようになりました。\n"
-"author: adamevin\n"
-"---\n"
+msgstr "すべてのツールが更新され、選択したエクステンションの真の力を示すサンプルコード（Extension Codestarts）とともにQuarkusアプリケーションを生成できるようになりました。"
 
 #. type: YAML Front Matter: tags
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "extensions codestarts quickstart"
-msgstr "既存のエクステンションのコードスタート"
+msgstr "extensions codestarts quickstart"
 
 #. type: YAML Front Matter: title
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Extension codestarts - A new way to learn & discover Quarkus"
 msgstr "Extension codestarts - Quarkusを学び、発見する新しい方法"
 
