--- a/l10n/po/ja_JP/_posts/2022-04-14-quarkus-newsletter-19.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-04-14-quarkus-newsletter-19.adoc.po
@@ -3,66 +3,64 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-04-30 06:11+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-04-30 21:14+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: YAML Front Matter: author
 #: upstream/_posts/2022-04-14-quarkus-newsletter-19.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "jcobb"
-msgstr "コブシ"
+msgstr "jcobb"
 
 #. type: YAML Front Matter: date
 #: upstream/_posts/2022-04-14-quarkus-newsletter-19.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2022-04-14"
 msgstr "2022-04-14"
 
 #. type: YAML Front Matter: layout
 #: upstream/_posts/2022-04-14-quarkus-newsletter-19.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "post"
-msgstr "ポスト"
+msgstr "post"
 
 #. type: YAML Front Matter: synopsis
 #: upstream/_posts/2022-04-14-quarkus-newsletter-19.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "The latest curated online stories, articles, and videos in and around Quarkus."
 msgstr "Quarkusとその周辺に関する最新のオンラインストーリー、記事、ビデオなどをキュレーションしてお届けします。"
 
 #. type: YAML Front Matter: tags
 #: upstream/_posts/2022-04-14-quarkus-newsletter-19.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "newsletter"
 msgstr "ニュースレター"
 
 #. type: YAML Front Matter: title
 #: upstream/_posts/2022-04-14-quarkus-newsletter-19.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus Newsletter #19 - April"
 msgstr "Quarkus Newsletter #19 - April"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-14-quarkus-newsletter-19.adoc:13
-#, fuzzy
 msgid "The April newsletter has been sent. It's full of great new articles like \"Kubernetes Native Java with Quarkus\" by Jason Greene, John Clingan and Eric Deandrea. Others include:Develop and Deploy Cloud Native Java Applications at Supersonic speed, Build a REST API from the ground up with Quarkus 2.0, Building Databases on Kubernetes with Quarkus, Insights on Vaadin with Quarkus, Quarkus Tools for Visual Studio Code - 1.10.0 release, Qute Templating Engine Support - Now Available for Quarkus Tools for Visual Studio Code, and Riding Camel Quarkus: effortless APIs. You will also see the lastest Quarkus Insights episodes and upcoming Quarkus attended events."
-msgstr "4月号のニュースレターをお送りしました。Jason Greene、John Clingan、Eric Deandreaによる「Kubernetes Native Java with Quarkus」など、素晴らしい新記事満載です。その他、「Develop and Deploy Cloud Native Java Applications at Supersonic speed」「Build a REST API from the ground up with Quarkus 2.0」「Building Databases on Kubernetes with Quarkus」「Insight on Vaadin with Quarkus」「Quarkus Tools for Visual Studio Code - 1.10.0 release」「Qute Templating Engine Support - now available for Quarkus Tools for Visual Studio Code」「Riding Camel Quarkus: effortless apis」などが掲載されています。また、最新のQuarkus Insightsのエピソードや、Quarkusが参加する予定のイベントもご覧いただけます。"
+msgstr "4月号のニュースレターが公開されました。Jason Greene、John Clingan、Eric Deandreaによる「Kubernetes Native Java with Quarkus」など、素晴らしい新記事満載です。その他、「Develop and Deploy Cloud Native Java Applications at Supersonic speed」「Build a REST API from the ground up with Quarkus 2.0」「Building Databases on Kubernetes with Quarkus」「Insight on Vaadin with Quarkus」「Quarkus Tools for Visual Studio Code - 1.10.0 release」「Qute Templating Engine Support - now available for Quarkus Tools for Visual Studio Code」「Riding Camel Quarkus: effortless apis」などが掲載されています。また、最新のQuarkus Insightsのエピソードや、Quarkusが参加する予定のイベントもご覧いただけます。"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-14-quarkus-newsletter-19.adoc:15
-#, fuzzy
 msgid "Check out https://quarkus.io/newsletter/19/[Newsletter #19]!"
-msgstr "link:https://quarkus.io/newsletter/19/[Newsletter #19] をご覧ください。"
+msgstr "link:https://quarkus.io/newsletter/19/[Newsletter #19] をご覧ください!"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-14-quarkus-newsletter-19.adoc:17
