--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-web-authentication.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-04-28 02:58+0000\n"
+"POT-Creation-Date: 2022-05-01 02:56+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -480,7 +480,7 @@ msgstr "テストするには、ブラウザを開いて以下のURLにアクセ
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-web-authentication.adoc:236
-msgid "http://localhost:8080[http://localhost:8080]"
+msgid "http://localhost:8080/tokens[http://localhost:8080/tokens]"
 msgstr ""
 
 #. type: Plain text
